--- a/now-ui-dashboard-react-master/public/index.html
+++ b/now-ui-dashboard-react-master/public/index.html
@@ -21,12 +21,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="%PUBLIC_URL%/apple-icon.png"
-    />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!--
@@ -52,7 +47,7 @@
       href="https://use.fontawesome.com/releases/v5.0.6/css/all.css"
       rel="stylesheet"
     />
-    <title>Now UI Dashboard React by Creative Tim</title>
+    <title>Agnomalies</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
